user-search api enhancement
